<resources>
    <string name="app_name">Java Repositories</string>
    <string name="name_repository">Nome Repositório</string>
    <string name="description_repo">Descrição do repositorio Mussum Ipsum, cacilds vidis litro abertis. Admodum accumsan disputationi eu sit.</string>
    <string name="number_forks">000</string>
    <string name="number_stars">000</string>
    <string name="username">username</string>
    <string name="name_surname">Nome Sobrenome</string>
    <string name="wait">Waiting...</string>
    <string name="no_results">No results!!</string>
    <string name="title_pull_request">Título do pull request</string>
    <string name="description_pull_request">Body pull request Mussum Ipsum, cacilds vidis litro abertis. Admodum accumsan disputationi eu sit</string>
    <string name="date_pull">14/10/2020</string>

</resources>