<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/name_repo_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name_repository"
        android:textColor="#2979FF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/description_repo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_repo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/description_repo"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_repo_text" />

    <ImageView
        android:id="@+id/image_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/number_stars"
        app:layout_constraintTop_toBottomOf="@+id/description_repo"
        app:srcCompat="@drawable/ic_baseline_star_24" />

    <ImageView
        android:id="@+id/image_fork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_repo"
        app:srcCompat="@drawable/ic_git_branch" />

    <TextView
        android:id="@+id/number_forks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/number_forks"
        android:textColor="#FFDF930B"
        app:layout_constraintStart_toEndOf="@+id/image_star"
        app:layout_constraintTop_toBottomOf="@+id/description_repo" />

    <TextView
        android:id="@+id/number_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/number_stars"
        android:textColor="#FFDF930B"
        app:layout_constraintStart_toEndOf="@+id/image_fork"
        app:layout_constraintTop_toBottomOf="@+id/description_repo" />

    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/description_repo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/username_repo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        android:textColor="#2979FF"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/avatar_image"
        app:layout_constraintStart_toStartOf="@+id/avatar_image"
        app:layout_constraintTop_toBottomOf="@+id/avatar_image" />

    <TextView
        android:id="@+id/name_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_surname"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/username_repo"
        app:layout_constraintStart_toStartOf="@+id/username_repo"
        app:layout_constraintTop_toBottomOf="@+id/username_repo" />


</androidx.constraintlayout.widget.ConstraintLayout>
